--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     body {
       font-family: Arial, sans-serif;
     }
+    input, select, button {
+      font-size: 1.2em;
+      padding: 10px;
+      margin: 5px;
+    }
     #combat-log {
       border: 1px solid #ccc;
       padding: 10px;
       height: 300px;
       overflow-y: auto;
+      margin-top: 20px;
     }
   </style>
 </head>
