--- a/index.html
+++ b/index.html
@@ -2,42 +2,39 @@
 <html>
 <head>
   <title>D&D Helper</title>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
-</head>
-<body>
-  <h1>D&D Helper</h1>
 
-  <!-- DM Side -->
-  <h2>For Dungeon Master</h2>
-  <label for="enemy-type">Enemy Type:</label>
-  <input type="text" id="enemy-type">
-  <label for="enemy-count">Count:</label>
-  <input type="number" id="enemy-count">
-  <button onclick="sendEnemies()">Send Enemies</button>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+    import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
 
-  <!-- Player Side -->
-  <h2>For Players</h2>
-  <div id="alert-box"></div>
-
-  <script>
-    // Initialize Firebase
+    // Your web app's Firebase configuration
     const firebaseConfig = {
-      // Your Firebase Config Here
+        apiKey: "AIzaSyAJU-G5AsPKWO6_VsdB0LPmTww1YoII9Uo",
+        authDomain: "mmo-ttrpg.firebaseapp.com",
+        projectId: "mmo-ttrpg",
+        storageBucket: "mmo-ttrpg.appspot.com",
+        messagingSenderId: "232247749266",
+        appId: "1:232247749266:web:87492bf9831f6c90d4d44b"
     };
-    firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
 
     // DM Side: Sending Enemies
     function sendEnemies() {
       const type = document.getElementById("enemy-type").value;
       const count = document.getElementById("enemy-count").value;
       const enemies = { type, count };
-      database.ref('game/enemies').set(enemies);
+      set(ref(db, 'game/enemies'), enemies);
     }
 
     // Player Side: Receiving Enemies
-    database.ref('game/enemies').on('value', (snapshot) => {
+    const enemyRef = ref(db, 'game/enemies');
+    onValue(enemyRef, (snapshot) => {
       const enemies = snapshot.val();
       const alertBox = document.getElementById("alert-box");
       if (enemies) {
@@ -45,5 +42,20 @@
       }
     });
   </script>
-</body>
-</html>
+  </head>
+  <body>
+    <h1>D&D Helper</h1>
+  
+    <!-- DM Side -->
+    <h2>For Dungeon Master</h2>
+    <label for="enemy-type">Enemy Type:</label>
+    <input type="text" id="enemy-type">
+    <label for="enemy-count">Count:</label>
+    <input type="number" id="enemy-count">
+    <button onclick="sendEnemies()">Send Enemies</button>
+  
+    <!-- Player Side -->
+    <h2>For Players</h2>
+    <div id="alert-box"></div>
+  </body>
+  </html>
