--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <script>
     function generateItem(){
-      let itemLevel = parseInt(document.getElementById("itemLevel").value, 10);
-      getLevelLoot(itemLevel);
+      Level = parseInt(document.getElementById("itemLevel").value, 10);
+      getLevelLoot();
     }
   </script>
 </head>
