--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     break;
             }
             
-            resultString += `<div style="border: 2px solid ${qualityColor}; padding: 10px; margin: 10px;">`;
+            resultString += `<div style="border: 2px solid ${qualityColor}; padding: 10px; margin: 10px; width: 300px;">`;
 
             // Add item quality name
             resultString += `<span style="color: ${qualityColor}; font-weight: bold;">${item.itemQuality.name}</span><br>`;
