--- a/index.html
+++ b/index.html
@@ -2,119 +2,121 @@
 <html>
 
 <head>
-  <title>Icycold's TTRPG Item Generator</title>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="math.js"></script>
-  <script src="arrays.js"></script>
-  <script src="items.js"></script>
-  <style>
-    /* Grid Layout */
-    #result {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-    }
-  </style>
-  <script>
-    function generate() {
-      let numberOfItems = parseInt(document.getElementById("itemNumber").value, 10);
-      let allResults = '';  // Global results string to accumulate all items
+	<title>Icycold's TTRPG Item Generator</title>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+	<script src="math.js"></script>
+	<script src="arrays.js"></script>
+	<script src="items.js"></script>
+	<style>
+		/* Grid Layout */
+		#result {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 10px;
+			justify-content: center;
+		}
+	</style>
+	<script>
+		function generate() {
+			let numberOfItems = parseInt(document.getElementById("itemNumber").value, 10);
+			let allResults = '';  // Global results string to accumulate all items
 
-      for (let i = 0; i < numberOfItems; i++) {
-        let item = generateItem();
+			for (let i = 0; i < numberOfItems; i++) {
+				let item = generateItem();
 
-        if (item) {
-          let resultString = '';  // Reset the individual result string for this item
+				if (item) {
+					let resultString = '';  // Reset the individual result string for this item
 
-          if (item.itemQuality) {
-            switch (item.itemQuality.name) {
-              case 'Common':
-                qualityColor = 'black';
-                break;
-              case 'Uncommon':
-                qualityColor = 'green';
-                break;
-              case 'Rare':
-                qualityColor = 'blue';
-                break;
-              case 'Epic':
-                qualityColor = 'purple';
-                break;
-              case 'Legendary':
-                qualityColor = 'orange';
-                break;
-              default:
-                qualityColor = 'black';
-                break;
-            }
+					if (item.itemQuality) {
+						switch (item.itemQuality.name) {
+							case 'Common':
+								qualityColor = 'black';
+								break;
+							case 'Uncommon':
+								qualityColor = 'green';
+								break;
+							case 'Rare':
+								qualityColor = 'blue';
+								break;
+							case 'Epic':
+								qualityColor = 'purple';
+								break;
+							case 'Legendary':
+								qualityColor = 'orange';
+								break;
+							default:
+								qualityColor = 'black';
+								break;
+						}
 
-            resultString += `<div style="border: 2px solid ${qualityColor}; padding: 10px; margin: 10px; width: 300px;">`;
+						resultString += `<div style="border: 2px solid ${qualityColor}; padding: 10px; margin: 10px; width: 300px;">`;
 
-            // Add item quality name
-            resultString += `<span style="color: ${qualityColor}; font-weight: bold;">${item.itemQuality.name}</span><br>`;
-          } else {
-            resultString += `<div style="border: 2px solid black; padding: 10px; margin: 10px; width: 300px;">`;
-          }
+						// Add item quality name
+						resultString += `<span style="color: ${qualityColor}; font-weight: bold;">${item.itemQuality.name}</span><br>`;
+					} else {
+						resultString += `<div style="border: 2px solid black; padding: 10px; margin: 10px; width: 300px;">`;
+					}
 
-          // Add item name
-          resultString += `<span style="font-size: 1.2em; font-weight: bold;">${item.name || 'Unnamed Item'}</span><br>`;
+					// Add item name
+					resultString += `<span style="font-size: 1.2em; font-weight: bold;">${item.name || 'Unnamed Item'}</span><br>`;
 
-          // Add level
-          resultString += `Level ${item.level}<br>`;
+					// Add level
+					if (item.level) {
+						resultString += `Level ${item.level}<br>`;
+					}
 
-          // If the item is a weapon, show damage range
-          if (item.minDamage && item.maxDamage) {
-            resultString += `${item.minDamage}-${item.maxDamage} Damage<br>`;
-          }
+					// If the item is a weapon, show damage range
+					if (item.minDamage && item.maxDamage) {
+						resultString += `${item.minDamage}-${item.maxDamage} Damage<br>`;
+					}
 
-          // Add primary attribute if available
-          if (item.primaryAttribute && item.primaryValue) {
-            resultString += `+${item.primaryValue} ${item.primaryAttribute}<br>`;
-          }
+					// Add primary attribute if available
+					if (item.primaryAttribute && item.primaryValue) {
+						resultString += `+${item.primaryValue} ${item.primaryAttribute}<br>`;
+					}
 
-          // Add secondary attributes
-          if (item.secondaryAttributes) {
-            for (let [attribute, value] of Object.entries(item.secondaryAttributes)) {
-              resultString += `+${value} ${attribute}<br>`;
-            }
-          }
+					// Add secondary attributes
+					if (item.secondaryAttributes) {
+						for (let [attribute, value] of Object.entries(item.secondaryAttributes)) {
+							resultString += `+${value} ${attribute}<br>`;
+						}
+					}
 
-          // Add item slot
-          if (item.slot) {
-            resultString += `<span>${item.slot}</span><br>`;
-          }
+					// Add item slot
+					if (item.slot) {
+						resultString += `<span>${item.slot}</span><br>`;
+					}
 
-          if (item.durability) {
-            // Add item durability
-            resultString += `<span><b>Durability:</b> ${item.durability} / ${item.durability}</span><br>`;
-          }
+					if (item.durability) {
+						// Add item durability
+						resultString += `<span><b>Durability:</b> ${item.durability} / ${item.durability}</span><br>`;
+					}
 
-          // Add item description
-          if (item.description) {
-            resultString += `<span>${item.description}</span><br>`;
-          }
+					// Add item description
+					if (item.description) {
+						resultString += `<span>${item.description}</span><br>`;
+					}
 
-          resultString += `</div>`;
+					resultString += `</div>`;
 
-          allResults += resultString;  // Accumulate the individual item result to the global results string
-        }
-      }
+					allResults += resultString;  // Accumulate the individual item result to the global results string
+				}
+			}
 
-      document.getElementById("result").innerHTML = allResults;
-    }
+			document.getElementById("result").innerHTML = allResults;
+		}
 
-  </script>
+	</script>
 </head>
 
 <body>
-  <h1>Advanced Item Generator</h1>
-  <form>
-    Enter Item Level: <input type="text" id="itemLevel">
-    Number of Items: <input type="text" id="itemNumber">
-    <input type="button" value="Generate Items" onclick="generate()">
-  </form>
-  <div id="result"></div>
+	<h1>Advanced Item Generator</h1>
+	<form>
+		Enter Item Level: <input type="text" id="itemLevel">
+		Number of Items: <input type="text" id="itemNumber">
+		<input type="button" value="Generate Items" onclick="generate()">
+	</form>
+	<div id="result"></div>
 </body>
 
 </html>
